added useless programs

--- a/FieldEmissionAnalysis/analysis/Makefile
+++ b/FieldEmissionAnalysis/analysis/Makefile
@@ -10,7 +10,7 @@ ROOTSYS ?= ERROR_RootSysIsNotDefined
 
 ROOTFLAG = `${ROOTSYS}/bin/root-config --cflags --libs`
 
-EXTRALIBS := -L$(ROOTSYS)/lib -lHtml -lMathCore -lGenVector -lMinuit -lTreePlayer -lRooFitCore -lRooFit #-L$(ROOFIT_LIBDIR)/ 
+EXTRALIBS := -L$(ROOTSYS)/lib -lHtml -lGenVector -lMinuit -lRooFitCore -lRooFit #-L$(ROOFIT_LIBDIR)/ 
 
 
 drawFieldEmission: drawFieldEmission.cpp AndCommon.o IScan.o IVScan.o IVScanFN.o
@@ -36,6 +36,12 @@ drawTempStability: drawTempStability.cpp AndCommon.o IScan.o
 
 computeGammaFromScans: computeGammaFromScans.cpp AndCommon.o UncCorr.o IVScan.o IVScanFN.o
 	$(CC) -Wall $(INCLUDES) -o computeGammaFromScans computeGammaFromScans.cpp AndCommon.o UncCorr.o IScan.o IVScan.o IVScanFN.o $(ROOTFLAG) $(EXTRALIBS)
+
+computeGammaFromScans_deltaV: computeGammaFromScans_deltaV.cpp AndCommon.o UncCorr.o IVScan.o IVScanFN.o
+	$(CC) -Wall $(INCLUDES) -o computeGammaFromScans_deltaV computeGammaFromScans_deltaV.cpp AndCommon.o UncCorr.o IScan.o IVScan.o IVScanFN.o $(ROOTFLAG) $(EXTRALIBS)
+
+computeGammaFromScans_R: computeGammaFromScans_R.cpp AndCommon.o UncCorr.o IVScan.o IVScanFN.o
+	$(CC) -Wall $(INCLUDES) -o computeGammaFromScans_R computeGammaFromScans_R.cpp AndCommon.o UncCorr.o IScan.o IVScan.o IVScanFN.o $(ROOTFLAG) $(EXTRALIBS)
 
 testUncCorr: testUncCorr.cpp AndCommon.o UncCorr.o
 	$(CC) -Wall $(INCLUDES) -o testUncCorr testUncCorr.cpp AndCommon.o UncCorr.o $(ROOTFLAG) $(EXTRALIBS)
